--- a/landingpage/package.json
+++ b/landingpage/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -15,13 +16,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
+  
   "browserslist": {
     "production": [
       ">0.2%",
@@ -35,5 +33,3 @@
     ]
   }
 }
-
-
